<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Login">

    <TextView
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="373dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="408dp"
        android:gravity="center"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="498dp"
        android:text="@string/login"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="458dp"
        android:gravity="center"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="538dp"
        android:gravity="center"
        android:text="@string/click_to_sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="304dp"
        android:gravity="center"
        android:text="@string/AlcoGuardian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="104dp"
        android:src="@drawable/cheers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="54dp"
        android:gravity="center"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="200dp"
        android:layout_height="15dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="624dp"
        android:gravity="center"
        android:text="@string/Presented"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="15dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="640dp"
        android:gravity="center"
        android:text="@string/Disclaimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>